# siipe

./: .gitignore  Pipfile  Readme.md  pyproject.toml
management/commands/: get_weight_tickets_from_siipe.py
migrations/: 0003_remove_weightticketmodel_movement_description_and_more.py
siipe/: apps.py  models.py
siipe/management/commands/: get_weight_tickets_from_siipe.py
siipe/migrations/: 0001_initial.py  0002_rename_weighttickettable_weightticketmodel.py
